chore: add ability to pass sensible data outside of the SQL query
